--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,8 +15,14 @@
     "@types/react-dom": "^16.9.8",
     "eslint": "^7.14.0",
     "react": "^17.0.1",
+    "react-awesome-reveal": "^3.5.1",
+    "react-component-transition": "^1.1.1",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
+    "react-reveal": "^1.2.2",
     "react-scripts": "4.0.1",
+    "react-zoom-component": "^0.1.3",
+    "reactjs-popup": "^2.0.4",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
@@ -40,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.10.6"
   }
 }
