--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "body-parser": "^1.19.0",
     "eslint": "^7.14.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.11.8",
+    "nodemon": "^2.0.6",
     "react": "^17.0.1",
     "react-awesome-reveal": "^3.5.1",
     "react-component-transition": "^1.1.1",
@@ -23,10 +27,12 @@
     "react-scripts": "4.0.1",
     "react-zoom-component": "^0.1.3",
     "reactjs-popup": "^2.0.4",
+    "shortid": "^2.2.16",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "server": "nodemon server.js",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
