--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "eslint": "^7.14.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.8",
